Make blobs and trees
파일업로드 로직은 FileUploadController로 분리.
화면에서 커밋 버튼을 클릭하면 서버에 blob과 tree들이 생성되고 index가 수정된다.